--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.18.0",
         "react-scripts": "5.0.0",
+        "socket.io-client": "^4.7.2",
         "web-vitals": "^2.1.0",
         "yarn": "^1.22.19"
     },
