--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "https://localhost:8080"
+    "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    },
+    "proxy": "https://localhost:8080/"
 }
