--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
         "@testing-library/react": "^12.0.0",
         "@testing-library/user-event": "^13.2.1",
         "axios": "^0.27.2",
+        "express": "^4.18.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^6.18.0",
+        "react-router-dom": "^6.20.1",
         "react-scripts": "5.0.0",
+        "socket.io": "^4.7.2",
         "socket.io-client": "^4.7.2",
         "web-vitals": "^2.1.0",
         "yarn": "^1.22.19"
