--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "axios": "^0.27.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^6.18.0",
+        "react-router-dom": "^6.20.1",
         "react-scripts": "5.0.0",
         "socket.io-client": "^4.7.2",
         "web-vitals": "^2.1.0",
@@ -22,7 +22,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "build:css": "npx tailwindcss -i ./src/tailwind.css -o ./src/input.css --watch"
     },
     "eslintConfig": {
         "extends": [
