--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
         "axios": "^0.27.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-redux": "^9.0.4",
         "react-router-dom": "^6.20.1",
         "react-scripts": "5.0.0",
         "socket.io-client": "^4.7.2",
