--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,12 @@
         "@testing-library/react": "^12.0.0",
         "@testing-library/user-event": "^13.2.1",
         "axios": "^0.27.2",
-        "react": "^17.0.2",
+        "react": "^18.2.0",
         "react-dom": "^17.0.2",
         "react-redux": "^9.0.4",
         "react-router-dom": "^6.20.1",
         "react-scripts": "5.0.0",
+        "react2": "^15.3.1",
         "socket.io-client": "^4.7.2",
         "web-vitals": "^2.1.0",
         "yarn": "^1.22.19"
